--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 body {
-  margin: 0.5em;
+  margin: 0 auto;
+  padding: 1em;
+  max-width: 1024px;
+}
+
+header {
+  margin-bottom: 3em;
 }
 
 header > p {
@@ -9,10 +15,11 @@ header > p {
 
 aside {
   background: #d9edf7;
-  padding: 0.3em 1em;
+  padding: 0.5em 2em;
   border-radius: 3px;
   color: #000000;
 }
+
 
 form {
   margin-top: 2em;
@@ -21,6 +28,14 @@ form {
 
 form input {
   margin: 1em 0;
+}
+
+h2 {
+  margin-top: 4em;
+}
+
+h3 {
+  margin-top: 3em;
 }
 
 .warning {
@@ -33,9 +48,13 @@ form input {
   background: #f2dede;
 }
 
+.form {
+  margin: 1em 0 2em 2em;
+}
+
 
 dt {
-  font-weight: bold;
+  font-style: italic;
   margin-top: 1em;
 }
 
